--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
 
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha06'
 }
