--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
     implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha06'
+
+    implementation 'com.google.android.material:material:1.2.0-alpha04'
 }
